Started fav things

--- a/hobbies.html
+++ b/hobbies.html
@@ -10,7 +10,7 @@
     <ul>
         <li><a href="index.html">&#127979; Home </a></li>
         <li>
-            <a href="catalog.html">&#128218;Catalog</a>
+            <a href="hobbies.html">&#128218;Hobbies</a>
             <div class="dropdown-content">
                 <ul>
                     <li> <a href="#">Link 1</a> </li>
@@ -20,7 +20,7 @@
             </div>
         </li>
         <li>
-            <a href="events.html">&#128198;Events </a>
+            <a href="songs.html">&#128198;Songs </a>
             <div class="dropdown-content">
                 <ul>
                     <li> <a href="#">Link 4</a> </li>
@@ -29,9 +29,8 @@
                 </ul>
             </div>
         </li>
-        <li><a href="contact.html">&#128222;Contact</a></li>
+        <li><a href="books.html">&#128222;Books</a></li>
     </ul>
 </nav>
-<h1>Upcoming Events</h1>
 </body>
 </html>
