--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
       <a class="active" href="index.html">&#127979; Movies </a>
       <div class="dropdown-content">
         <ul>
-          <li> <a href="#">Link 1</a> </li>
-          <li> <a href="#">Link 2</a> </li>
-          <li> <a href="#">Link 3</a> </li>
-          <li> <a href="#">Link 4</a> </li>
+          <li> <a href="#" target="_blank">Twilight</a> </li>
+          <li> <a href="#" target="_blank">Link 2</a> </li>
+          <li> <a href="#" target="_blank">Link 3</a> </li>
+          <li> <a href="#" target="_blank">Link 4</a> </li>
         </ul>
       </div>
     </li>
@@ -23,10 +23,10 @@
       <a href="hobbies.html">&#128218;Hobbies</a>
       <div class="dropdown-content">
         <ul>
-          <li> <a href="#">Link 5</a> </li>
-          <li> <a href="#">Link 6</a> </li>
-          <li> <a href="#">Link 7</a> </li>
-          <li> <a href="#">Link 8</a> </li>
+          <li> <a href="#" target="_blank">Soccer</a> </li>
+          <li> <a href="#" target="_blank">Link 6</a> </li>
+          <li> <a href="#" target="_blank">Link 7</a> </li>
+          <li> <a href="#" target="_blank">Link 8</a> </li>
         </ul>
       </div>
     </li>
@@ -35,10 +35,10 @@
       <a href="songs.html">&#128198;Songs </a>
       <div class="dropdown-content">
         <ul>
-          <li> <a href="#">Link 9</a> </li>
-          <li> <a href="#">Link 10</a> </li>
-          <li> <a href="#">Link 11</a> </li>
-          <li> <a href="#">Link 12</a> </li>
+          <li> <a href="#" target="_blank">Link 9</a> </li>
+          <li> <a href="#" target="_blank">Link 10</a> </li>
+          <li> <a href="#" target="_blank">Link 11</a> </li>
+          <li> <a href="#" target="_blank">Link 12</a> </li>
         </ul>
       </div>
     </li>
@@ -47,10 +47,10 @@
       <a href="books.html">&#128218;Books</a>
       <div class="dropdown-content">
         <ul>
-          <li> <a href="#">Link 13</a> </li>
-          <li> <a href="#">Link 14</a> </li>
-          <li> <a href="#">Link 15</a> </li>
-          <li> <a href="#">Link 16</a> </li>
+          <li> <a href="#" target="_blank">The Lion, the Witch, and the Wardrobe</a> </li>
+          <li> <a href="#" target="_blank">Link 14</a> </li>
+          <li> <a href="#" target="_blank">Link 15</a> </li>
+          <li> <a href="#" target="_blank">Link 16</a> </li>
         </ul>
       </div>
     </li>
